# kaleidoscope

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
ast/: ast.h  binary.cpp  binary.h  call.cpp  call.h  for.cpp  for.h  function.cpp  function.h  if.cpp  if.h  num.cpp  num.h  prototype.cpp  prototype.h  unary.cpp  unary.h  var.cpp  var.h  variable.cpp  variable.h
example/: main.cpp
jit/: jit.h
kaleidoscope/: kaleidoscope.cpp  kaleidoscope.h
lexer/: lexer.cpp  lexer.h  token.h
llvm/: llvm.h
log/: log.cpp  log.h
parser/: parser.cpp  parser.h
